--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@ certifi==2017.7.27.1
 chardet==3.0.4
 colorama==0.3.9
 coverage==4.4.2
+dj-database-url==0.4.2
 Django==1.11.8
 djangorestframework==3.7.3
 djangorestframework-jwt==1.11.0
 flake8==3.5.0
+gunicorn==19.7.1
+hangman==0.0.1
 idna==2.6
 mccabe==0.6.1
 numpy==1.13.3
@@ -25,3 +28,4 @@ requests==2.18.4
 urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
+whitenoise==3.3.1
